@@ -8,22 +8,22 @@ RMD160 ae8b7c2e628681fff153bfa10242e62df5ab2e10 files/patches/000_all_makefile-i
 SHA256 2da16602ef3c4cb040ac80a9fed18660fadcae2e843f425da0872f50aa5356db files/patches/000_all_makefile-include-directory.patch 342
 DIST VMware-server-1.0.1-29996.tar.gz 105500734 RMD160 f4d5805a230afd45ee2234065ffc7c172dd12e18 SHA1 d5e9719fe6dcfef7f13b7e91e31c51905bbeab60 SHA256 08cfa19d9e5475fdaf12114d99bdeecacfd703dd3ec129958bf6f7e98d11641b
 DIST vmware-any-any-update104.tar.gz 297243 RMD160 426616f026de409ca057ec1a0913dc9b3d43ef03 SHA1 9ca5224d832f2b0c0041a1e6afa0103915cdad0f SHA256 c0a9efad2677e93ed914e296131916f8b316377644c5d8c716e6575cd58b3c69
-EBUILD vmware-modules-1.0.0.11.ebuild 190 RMD160 95d8feb593a9a4b08aaf16455644126c3b16059e SHA1 2db26f11be81db98b004a45f897c84653ed48fb2 SHA256 8b98215ff54efb32e849bd10a4d613b572b01bd79e2485948b3242e653b1eb10
-MD5 0741e0040a72b54bf8a46596c724e5e0 vmware-modules-1.0.0.11.ebuild 190
-RMD160 95d8feb593a9a4b08aaf16455644126c3b16059e vmware-modules-1.0.0.11.ebuild 190
-SHA256 8b98215ff54efb32e849bd10a4d613b572b01bd79e2485948b3242e653b1eb10 vmware-modules-1.0.0.11.ebuild 190
-EBUILD vmware-modules-1.0.0.13.ebuild 189 RMD160 3b87cad3107ac8ba674478e43e49fb2937bf8526 SHA1 6c6ce9256c650c5406c0a157d1e42317e015ec62 SHA256 01a9d3adf551f489f657cffe6d03e838cce95a9ed8da42e5008d5c805e8f406e
-MD5 494315b628818e68747ae719693d5fb1 vmware-modules-1.0.0.13.ebuild 189
-RMD160 3b87cad3107ac8ba674478e43e49fb2937bf8526 vmware-modules-1.0.0.13.ebuild 189
-SHA256 01a9d3adf551f489f657cffe6d03e838cce95a9ed8da42e5008d5c805e8f406e vmware-modules-1.0.0.13.ebuild 189
-EBUILD vmware-modules-1.0.0.15.ebuild 634 RMD160 4ac343634e87426c9d5437c849f2cf956c660981 SHA1 2ec0f56672d67231b464fc30e05b1b598cfd1abf SHA256 a7fb415620014a31b5348d7c3fcd52c6a9b01e1b34bd1136d66d55cc9bf55bb7
-MD5 89c6795e9f4c48a25dad6e4710f7bef4 vmware-modules-1.0.0.15.ebuild 634
-RMD160 4ac343634e87426c9d5437c849f2cf956c660981 vmware-modules-1.0.0.15.ebuild 634
-SHA256 a7fb415620014a31b5348d7c3fcd52c6a9b01e1b34bd1136d66d55cc9bf55bb7 vmware-modules-1.0.0.15.ebuild 634
-EBUILD vmware-modules-1.0.0.8.ebuild 190 RMD160 d4023a332d396d9ef37d94bc56ef8c2da290bf7f SHA1 d884a5ca082a259634651d10eb682b42146a8c0a SHA256 29cd22e70823751704af276d193c6b07c26cc54cde374448ce5476053e0d6fdb
-MD5 e6931a22a36eb027f603f13b832b1b8c vmware-modules-1.0.0.8.ebuild 190
-RMD160 d4023a332d396d9ef37d94bc56ef8c2da290bf7f vmware-modules-1.0.0.8.ebuild 190
-SHA256 29cd22e70823751704af276d193c6b07c26cc54cde374448ce5476053e0d6fdb vmware-modules-1.0.0.8.ebuild 190
+EBUILD vmware-modules-1.0.0.11.ebuild 187 RMD160 54f1644b6d11bbf40f5ba77d4bedbd8f40e4a5a4 SHA1 6c06c028355efe48aee82964d05761d7f4392a56 SHA256 8dd4625f0a84d6f515e0b20cd7641a26c3dac2f8f49e9b6791b33e55027898cb
+MD5 96e828df10661cba43210b4282b81538 vmware-modules-1.0.0.11.ebuild 187
+RMD160 54f1644b6d11bbf40f5ba77d4bedbd8f40e4a5a4 vmware-modules-1.0.0.11.ebuild 187
+SHA256 8dd4625f0a84d6f515e0b20cd7641a26c3dac2f8f49e9b6791b33e55027898cb vmware-modules-1.0.0.11.ebuild 187
+EBUILD vmware-modules-1.0.0.13.ebuild 186 RMD160 47b8051034781da883f8e2faab28b61721597dd7 SHA1 64f8b904a90de5fc8cb37b3c06ef7c587776ff12 SHA256 974eaee0d5334684960c91559f29eded0ec7ccd6850d0dbe116d7fbf95361d77
+MD5 7cab792985068e56dd9e95f346226ccb vmware-modules-1.0.0.13.ebuild 186
+RMD160 47b8051034781da883f8e2faab28b61721597dd7 vmware-modules-1.0.0.13.ebuild 186
+SHA256 974eaee0d5334684960c91559f29eded0ec7ccd6850d0dbe116d7fbf95361d77 vmware-modules-1.0.0.13.ebuild 186
+EBUILD vmware-modules-1.0.0.15.ebuild 632 RMD160 f3d0ea8be2e5952cd671122af81ed1c34042241b SHA1 8b3672419d40110ee25837ad721be168ee78cda4 SHA256 2040d36069badd98c2120a0a911c753ce259b054ca3299cf30cbf908520cd226
+MD5 d4017b714ba0b37e3a3bd1a03339e5e1 vmware-modules-1.0.0.15.ebuild 632
+RMD160 f3d0ea8be2e5952cd671122af81ed1c34042241b vmware-modules-1.0.0.15.ebuild 632
+SHA256 2040d36069badd98c2120a0a911c753ce259b054ca3299cf30cbf908520cd226 vmware-modules-1.0.0.15.ebuild 632
+EBUILD vmware-modules-1.0.0.8.ebuild 187 RMD160 79723246afcb5c8e548756646a08a695cf8ea153 SHA1 e51a3faa36e3c61b12d0d7f7f0998ba5a746d8fc SHA256 f3440003664ecdec2753d1f4098fee972d9812891d4efe30719346d4532d2bb9
+MD5 4fae4cfcce96d53852f5e4133d4c282a vmware-modules-1.0.0.8.ebuild 187
+RMD160 79723246afcb5c8e548756646a08a695cf8ea153 vmware-modules-1.0.0.8.ebuild 187
+SHA256 f3440003664ecdec2753d1f4098fee972d9812891d4efe30719346d4532d2bb9 vmware-modules-1.0.0.8.ebuild 187
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
