@@ -2,11 +2,12 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+KEYWORDS="~amd64 ~x86"
+VMWARE_VER="VME_S1B1"
+
 inherit toolchain-funcs vmware-mod
 
 SRC_URI="http://download3.vmware.com/software/vmserver/VMware-server-1.0.1-29996.tar.gz"
-KEYWORDS="-* ~amd64 ~x86"
-VMWARE_VER="VME_S1B1"
 
 VMWARE_MOD_DIR="vmware-server-distrib/lib/modules/source"
 
